--- a/index.html
+++ b/index.html
@@ -1038,9 +1038,9 @@
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
         <img src="jonathan-graduation-practice.jpg" alt="Profile Picture">
-        <p>I want to change the world knowing that I have enough knowledge to prove myself I am always following my dreams.</p>
-        <p>I entered EVIT (East Valley Institute of Technology) in July 24th 2024 to follow my dreams and get the most out of certifications.</p>
-        <p>I am currently 17 years old.</p>
+        <p>Hi, my name is Jonathan Guardado Agredano. I am passionate about computers and never give up on my dreams. Everything you do in life has a purpose. I want to change the world knowing that I have enough knowledge to prove myself. I am always following my dreams.</p>
+        <p>I entered EVIT (East Valley Institute of Technology) in July 24th 2024 to follow my dreams and get the most out of certifications. I am currently learning Network Security.</p>
+        <p>I am currently 18 years old. Pronouns: He/Him/His. Fun fact: I like to meet new people that like to learn Software and App Design and Network Security.</p>
         <img src="jonathan-guardado-agredano.jpg" alt="Photo of Me at My Current Age">
         <img src="las-vegas-7-31-2023.jpg" alt="Photo of Me in Las Vegas, Nevada">
         <div class="floating-decor circle" style="top: 10%; left: 5%;"></div>
@@ -1048,13 +1048,18 @@
     </section>
     <section id="skills-section" class="skills-section">
         <h2>My Skills</h2>
+        <ul>
+        </ul>
         <div class="floating-decor star" style="top: 20%; left: 15%;"></div>
         <div class="floating-decor circle" style="bottom: 20%; right: 10%;"></div>
     </section>
     <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-tile">
-            <a href="one-word-theme-for-2025.pdf" target="_blank" class="btn">Project 1</a>
+            <a href="one-word-theme-for-2025.pdf" target="_blank" class="btn">One Word Theme for 2025</a>
+        </div>
+        <div class="project-tile">
+            <a href="https://github.com/Guar2819/skillstruck-practice" target="_blank" class="btn">SkillStruck Practice (Python)</a>
         </div>
         <div class="floating-decor circle" style="top: 15%; left: 10%;"></div>
         <div class="floating-decor star" style="bottom: 10%; right: 15%;"></div>
