--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@
     </section>
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
-        <img src="01-03-2026-1709-300x300.jpg" alt="Profile Picture">
+        <img src="01-03-2026-1709-300x300.png" alt="Profile Picture">
         <p>Hi, my name is Jonathan Guardado Agredano. I am passionate about computers and never give up on my dreams. Everything you do in life has a purpose. I want to change the world knowing that I have enough knowledge to prove myself. I am always following my dreams.</p>
         <p>I entered EVIT (East Valley Institute of Technology) in July 24th 2024 to follow my dreams and get the most out of certifications. I am currently learning Network Security.</p>
         <p>I am currently 18 years old. Pronouns: He/Him/His. Fun fact: I like to meet new people that like to learn Software and App Design and Network Security.</p>
