Added Certificate Images

--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,10 @@
         <h2>My Skills</h2>
         <ul>
         </ul>
+
+        <img src="Device Configuration and Management.pdf" alt="Certification #1">
+        <img src="Networking Essentials.pdf" alt="Certification #2">
+
         <div class="floating-decor star" style="top: 20%; left: 15%;"></div>
         <div class="floating-decor circle" style="bottom: 20%; right: 10%;"></div>
     </section>
