--- a/index.html
+++ b/index.html
@@ -1051,8 +1051,8 @@
         <ul>
         </ul>
 
-        <img src="Device Configuration and Management.pdf" alt="Certification #1">
-        <img src="Networking Essentials.pdf" alt="Certification #2">
+        <img src="Screenshot 2026-02-02 191001-750x580.png" alt="Certification #1">
+        <img src="Screenshot 2026-02-02 191746-749x507.png" alt="Certification #2">
 
         <div class="floating-decor star" style="top: 20%; left: 15%;"></div>
         <div class="floating-decor circle" style="bottom: 20%; right: 10%;"></div>
